--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace]
 Pos=0,0
-Size=1604,1008
+Size=1600,900
 Collapsed=0
 
 [Window][Hello info]
@@ -16,7 +16,7 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=278,24
-Size=853,709
+Size=849,601
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -27,8 +27,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Stats]
-Pos=1133,865
-Size=471,143
+Pos=1129,772
+Size=471,128
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -39,8 +39,8 @@ Collapsed=0
 DockId=0x00000011,0
 
 [Window][Settings]
-Pos=1133,647
-Size=471,216
+Pos=1129,578
+Size=471,192
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -63,26 +63,26 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Brush Parameters]
-Pos=1133,232
-Size=471,413
+Pos=1129,24
+Size=471,552
 Collapsed=0
 DockId=0x00000021,0
 
 [Window][Stroke Parameters]
-Pos=1133,232
-Size=471,413
+Pos=1129,24
+Size=471,552
 Collapsed=0
 DockId=0x00000021,1
 
 [Window][Hierarchy]
 Pos=0,24
-Size=276,653
+Size=276,581
 Collapsed=0
 DockId=0x00000017,0
 
 [Window][Entity]
-Pos=0,679
-Size=276,329
+Pos=0,607
+Size=276,293
 Collapsed=0
 DockId=0x00000018,0
 
@@ -105,20 +105,20 @@ Collapsed=0
 DockId=0x0000001E,0
 
 [Window][Weight Painting]
-Pos=1133,24
-Size=471,206
+Pos=1129,24
+Size=471,183
 Collapsed=0
 DockId=0x00000020,0
 
 [Window][Import Export]
-Pos=278,735
-Size=853,273
+Pos=278,627
+Size=330,273
 Collapsed=0
 DockId=0x0000001D,0
 
 [Window][Color scheme]
-Pos=1133,647
-Size=471,216
+Pos=1129,578
+Size=471,192
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -136,7 +136,7 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace                   ID=0x0B154A57 Window=0x5B816B74 Pos=265,200 Size=1604,984 Split=X
+DockSpace                   ID=0x0B154A57 Window=0x5B816B74 Pos=508,279 Size=1600,876 Split=X
   DockNode                  ID=0x00000015 Parent=0x0B154A57 SizeRef=276,881 Split=Y Selected=0x29EABFBD
     DockNode                ID=0x00000017 Parent=0x00000015 SizeRef=298,581 Selected=0x29EABFBD
     DockNode                ID=0x00000018 Parent=0x00000015 SizeRef=298,293 Selected=0xF57F7DD5
@@ -152,7 +152,7 @@ DockSpace                   ID=0x0B154A57 Window=0x5B816B74 Pos=265,200 Size=160
       DockNode              ID=0x00000004 Parent=0x00000005 SizeRef=1600,102 Selected=0x1C6C59D2
     DockNode                ID=0x00000006 Parent=0x00000016 SizeRef=471,881 Split=Y Selected=0x89EA9F14
       DockNode              ID=0x00000007 Parent=0x00000006 SizeRef=346,819 Split=Y Selected=0x89EA9F14
-        DockNode            ID=0x00000009 Parent=0x00000007 SizeRef=374,594 Split=Y Selected=0x89EA9F14
+        DockNode            ID=0x00000009 Parent=0x00000007 SizeRef=374,552 Split=Y Selected=0x89EA9F14
           DockNode          ID=0x0000000E Parent=0x00000009 SizeRef=573,345 Split=Y Selected=0x89EA9F14
             DockNode        ID=0x0000000D Parent=0x0000000E SizeRef=573,380 Split=Y Selected=0x89EA9F14
               DockNode      ID=0x00000011 Parent=0x0000000D SizeRef=573,243 Selected=0x89EA9F14
@@ -160,10 +160,10 @@ DockSpace                   ID=0x0B154A57 Window=0x5B816B74 Pos=265,200 Size=160
                 DockNode    ID=0x00000019 Parent=0x00000012 SizeRef=462,212 Selected=0xFD397559
                 DockNode    ID=0x0000001A Parent=0x00000012 SizeRef=462,448 Split=Y Selected=0x2A6A89B7
                   DockNode  ID=0x00000020 Parent=0x0000001A SizeRef=471,197 Selected=0x45848948
-                  DockNode  ID=0x00000021 Parent=0x0000001A SizeRef=471,395 Selected=0x1A946199
+                  DockNode  ID=0x00000021 Parent=0x0000001A SizeRef=471,395 Selected=0x2A6A89B7
             DockNode        ID=0x00000010 Parent=0x0000000E SizeRef=573,222 Selected=0xCA3ECDE9
           DockNode          ID=0x0000000F Parent=0x00000009 SizeRef=573,257 Selected=0xC452E1DE
-        DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=374,206 Selected=0xD3D769BB
+        DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=374,192 Selected=0x54723243
       DockNode              ID=0x00000008 Parent=0x00000006 SizeRef=346,140 Split=X Selected=0xCCAD60AB
         DockNode            ID=0x0000000B Parent=0x00000008 SizeRef=338,111 Selected=0xCCAD60AB
         DockNode            ID=0x0000000C Parent=0x00000008 SizeRef=157,111 Selected=0xB01BC767
